--- a/vaf/requirements.txt
+++ b/vaf/requirements.txt
@@ -1,30 +1,15 @@
-amqp==2.4.1
-billiard==3.5.0.5
-celery==4.2.1
-certifi==2018.11.29
-chardet==3.0.4
-Django==2.1.5
-django-appconf==1.0.2
+colorama==0.4.1
+confusable-homoglyphs==3.2.0
+Django==2.1.7
 django-ckeditor==5.6.1
-django-compressor==2.2
 django-crispy-forms==1.7.2
-django-js-asset==1.1.0
-django-simple-pagination==1.3
+django-db-signals==0.1.1
+django-filter==2.1.0
+django-js-asset==1.2.2
+django-registration==3.0
 django-wysiwyg==0.8.0
-idna==2.8
-kombu==4.3.0
-pbr==5.1.2
-Pillow==5.3.0
-pytz==2018.7
-rcssmin==1.0.6
-requests==2.8.0
-rjsmin==1.0.12
-six==1.12.0
-somepackage==1.2.3
-stevedore==1.30.0
-urllib3==1.24.1
-vine==1.2.0
-virtualenv==16.1.0
-virtualenv-clone==0.5.1
-virtualenvwrapper==4.8.4
-virtualenvwrapper-win==1.2.5
+mccabe==0.6.1
+Pillow==5.4.1
+psycopg2==2.7.7
+psycopg2-binary==2.7.7
+pytz==2018.9
